syntax = "proto3";

package Server.Services;
import "google/protobuf/timestamp.proto";

service PingService
{
    rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest
{
    string message = 1;
}

message PingResponse
{
    string response = 1;
    google.protobuf.Timestamp timestamp = 2;
}